# doom-fire-algorithm

./: .gitignore  README.md  fire.js  index.html
engines/: canvas.js  dom-table.js
playground/: Doom-Fire-master.rar
playground/1st-implementation-with-tables-manual-color-changer/: Fire.js  index.html
playground/1st-implementation-with-tables-manual-variable-wind/: README.md  fire.js  index.html
playground/1st-implementation-with-tables-pinkedition/: README.md  fire.js  index.html
playground/1st-implementation-with-tables-randomic-variable-wind/: fire.js
playground/1st-implementation-with-tables-upside-down/: fire.js
playground/2019-01-1st-implementation-with-tables/: README.md
playground/BashDoomFire/: doomfire.sh
playground/Dart-Doom-Fire/: README.md  fire.dart  fire.dart.js  fire.dart.js.deps  fire.dart.js.map  index.html
playground/FogoDOOM-Control screen resizing/: README.md
playground/SwiftUI-DoomFire/: README.md
playground/allegro5-c-fire/: .gitignore  build.sh  main.c  main.h
playground/android-customview-kotlin-implementation/: Readme.md  build.gradle  local.properties
playground/android-implementation-kotlin/: README.md  build.gradle
playground/burning-elements/: README.md  burnControl.js  burnElement.css  burnElements.js  index.html
playground/c#-unity-3d/: readme.md  (+2 more)
playground/cpp-sfml-implementation/: .gitattributes  CMakeLists.txt  README.md  main.cpp
playground/cpp-sfml-implementation/cmake_modules/: FindSFML.cmake
playground/cpp-sfml-implementation/include/: Fire.h
playground/cpp-sfml-implementation/src/: Fire.cpp
(+386 files in other folders)
